[package]
name = "skin-tone"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking", "cookies"] }
fantoccini = "0.19.0"
serde = { version = "*", features = ["derive"] }
csv = "1.1"
tokio = { version = "*", features = ["full"] }
anyhow = "*"
